--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -18,3 +18,5 @@ body {
   flex: 1 1 auto;
   background: linear-gradient(180deg, #e8f0f2 0%, rgba(232, 240, 242, 0) 100%);
 }
+
+@import url('global/layout.css');
