--- a/src/assets/styles/global/layout.css
+++ b/src/assets/styles/global/layout.css
@@ -1,8 +1,3 @@
-.main_content_wrapper {
-  padding: 50px 66px 25px;
-  text-align: center;
-}
-
 .main_content_title {
   font-family: 'Open Sans';
   font-style: normal;
@@ -14,4 +9,60 @@
   color: #0f0f0f;
   display: flex;
   flex-direction: column;
+}
+
+.content__title {
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 29px;
+  text-align: center;
+  color: #0f0f0f;
+}
+
+.item_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1 1 auto;
+  gap: 15px;
+}
+
+.item {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff;
+  border: 1px solid rgba(231, 235, 237, 0.80141);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
+  border-radius: 14px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: #425a60;
+  cursor: pointer;
+}
+.item:first-child {
+  margin-top: 25px;
+}
+.bottom_link {
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  text-decoration-line: underline;
+  color: #3a4850;
+}
+
+.first_and_second_item {
+  max-width: 275px;
+  padding: 24px 0px 30px;
+}
+
+.first_and_second_item img {
+  margin-bottom: 15px;
 }
