fix ts errors about context and add pageprovider

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -27,6 +27,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
 
+  // animation: showBlock 3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.anim {
   animation: showBlock 3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
