--- a/src/assets/styles/global/_layout.scss
+++ b/src/assets/styles/global/_layout.scss
@@ -1,3 +1,16 @@
+@mixin item-border {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 14px;
+  background: #ffffff;
+  border: 1px solid rgba(231, 235, 237, 0.80141);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
+  max-width: 300px;
+}
+
 .main_content_title {
   font-family: 'Open Sans';
   font-style: normal;
@@ -29,15 +42,12 @@
 }
 
 .item {
-  width: 100%;
+  @include item-border();
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #ffffff;
-  border: 1px solid rgba(231, 235, 237, 0.80141);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
-  border-radius: 14px;
+
   font-weight: 600;
   font-size: 18px;
   line-height: 25px;
@@ -73,13 +83,16 @@
   flex-direction: column;
   justify-content: space-between;
   transform: translate(100%, 0);
-  opacity: 0;
+  &.show_forw {
+    transform: translate(100%, 0);
+  }
+  &.show_back {
+    transform: translate(-100%, 0);
+  }
   &.animated {
     transform: none;
-    opacity: 1;
   }
 }
-
 @keyframes showForward {
   0% {
     transform: translate(100%, 0);
@@ -107,4 +120,8 @@
 .show_forw {
   transform: translate(100%, 0);
   animation: showForward 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+}
+
+.third_item {
+  padding: 45px 0px;
 }
