--- a/src/assets/styles/global/_layout.scss
+++ b/src/assets/styles/global/_layout.scss
@@ -10,7 +10,42 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
   max-width: 300px;
 }
-
+@mixin itemWithImgAfter {
+  padding: 27px 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: #425a60;
+  div {
+    padding-right: 23px;
+    position: relative;
+    margin-left: 28px;
+    width: 100%;
+    max-width: 67px;
+    display: flex;
+    align-items: center;
+    &::after {
+      content: '';
+      width: 1px;
+      height: 35px;
+      background: #dedede;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 0;
+    }
+  }
+  span {
+    width: 100%;
+    flex: 1 1 auto;
+    margin-left: 18px;
+    text-align: left;
+  }
+}
 .main_content_title {
   font-family: 'Open Sans';
   font-style: normal;
@@ -124,4 +159,11 @@
 
 .third_item {
   padding: 45px 0px;
+}
+
+.sixth__item {
+  @include itemWithImgAfter();
+  div {
+    max-width: 96px;
+  }
 }
