--- a/src/components/Pages/Eighth/EighthPage.module.scss
+++ b/src/components/Pages/Eighth/EighthPage.module.scss
@@ -28,3 +28,19 @@
   background: #dedede;
   cursor: not-allowed;
 }
+
+.selected {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: -9px;
+  right: -9px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #2196f3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.2s ease-in-out;
+}
