--- a/src/assets/styles/global/_layout.scss
+++ b/src/assets/styles/global/_layout.scss
@@ -178,9 +178,7 @@
 
 .eighth__item {
   @include item-border();
-}
-.container__scrollable {
-  transition: transform 0.05s linear;
+  height: 103px;
 }
 
 .btn {
@@ -189,3 +187,41 @@
   border-radius: 24px;
   border: none;
 }
+
+.selected {
+  border: 1px solid blue;
+}
+
+.grid__container {
+  display: grid;
+  grid-template-columns: repeat(4, 160px);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.custom__button {
+  height: 48px;
+  max-width: 180px;
+  width: 100%;
+  cursor: pointer;
+  text-align: center;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: #ffffff;
+  margin: 0 auto;
+  &:disabled {
+    background: #dedede;
+    cursor: not-allowed;
+  }
+  &[disabled] {
+    background: #dedede;
+    cursor: not-allowed;
+  }
+}
+
+
+
+
