--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -20,11 +20,18 @@ body {
 .app_body {
   flex: 1 1 auto;
   background: linear-gradient(180deg, #e8f0f2 0%, rgba(232, 240, 242, 0) 100%);
-  padding: 50px 0px 25px;
+  // padding: 50px 0px 25px;
+  padding: 0 25px;
+  padding-bottom: 25px;
+  padding-top: 50px;
   text-align: center;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   user-select: none;
+}
+
+.mt-25 {
+  margin-top: 25px !important;
 }
