--- a/src/components/Pages/StartPage/StartPage.module.scss
+++ b/src/components/Pages/StartPage/StartPage.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 60px;
 }
 .img {
   max-width: 312px;
