--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,14 @@
 .wrapper {
   width: 100%;
   max-height: 66px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .inner {
   padding: 14px 25px;
-
+  flex: 1 1 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
